# acme-mcp

./: README.md  pyproject.toml
.github/workflows/: test.yml
skills/handle-downloads/: SKILL.md
src/acme_mcp/: __init__.py  access.py  agents.py  audit.py  auth.py  server.py  storage.py
src/acme_mcp/domains/: __init__.py  admin.py  billing.py  orders.py  reports.py  support.py
tests/: conftest.py  test_access.py  test_agents.py  test_audit.py  test_auth.py  test_composition.py  test_domains.py  test_reports_s3.py
