[project]
name = "acme-mcp"
version = "0.1.0"
description = "A worked example of a secure FastMCP 3 server: JWT auth, per-group tool access, audit logging, multi-domain composition, and file delivery via S3 signed URLs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.4,<4",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "moto[s3]>=5",
]

[project.scripts]
acme-mcp = "acme_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acme_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
